--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "v1",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
