--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@heroicons/react": "v1",
     "@reduxjs/toolkit": "^1.8.6",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "firebase": "^9.13.0",
+    "firebase-admin": "^11.2.0",
     "next": "latest",
+    "next-auth": "^4.15.0",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
