--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
   "dependencies": {
     "@heroicons/react": "v1",
     "@reduxjs/toolkit": "^1.8.6",
+    "@stripe/stripe-js": "^1.42.1",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "firebase": "^9.13.0",
     "firebase-admin": "^11.2.0",
+    "micro": "^9.4.1",
     "next": "latest",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "stripe": "^10.17.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
